updates brave and removes out-of-date assertj build config (#3680)
Signed-off-by: Adrian Cole <adrian@tetrate.io>